[package]
name = "rustdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.21.0"
bytes = "1.4.0"
prost = "0.12.3"
tracing = { workspace = true }
bluer = { version = "0.17.0", features = ["bluetoothd", "rfcomm"] }
thiserror = "1.0.56"
hex-literal = "0.4.1"
openssl = "0.10.63"
hostname = "0.3.1"
mdns-sd = "0.10.3"
num-bigint = "0.4.4"
flume = "0.11.0"
dirs = "5.0.1"
uuid = "1.7.0"
infer = "0.15.0"
async-stream = "0.3.5"
futures = { workspace = true }
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio.workspace = true
modular-bitfield = "0.11.2"
color-eyre = "0.6.2"

[build-dependencies]
prost-build = "0.12.3"

[dev-dependencies]
hex = "0.4.3"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
