[package]
name = "rustdrop_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = { version = "0.7.0", features = ["tokio", "tracing"], default-features = false }
opener = "0.6.1"
rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
tokio.workspace = true
tokio-stream = "0.1.14"
tracing.workspace = true
tracing-subscriber = "0.3.18"
