[package]
name = "rustdrop_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.3.1", default-features = false }
ashpd = { version = "0.7.0", features = [
  "tokio",
  "tracing",
], default-features = false }
console-subscriber = { version = "0.2.0", optional = true }
flume = { workspace = true }
opener = "0.6.1"
rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"

[features]
console-subscriber = ["dep:console-subscriber"]
