[package]
name = "rustdrop_gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
flume = "0.11.0"
glib = "0.19.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12", "blueprint"] }
rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7.10"
tracing-subscriber = "0.3.18"

[build-dependencies]
glib-build-tools = "0.19.0"
