[package]
name = "rustdrop_gtk4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
async-stream = "0.3.5"
clap = "4.5.1"
flume = { workspace = true }
futures = { workspace = true }
glib = "0.19.0"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12", "blueprint"] }
rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = "0.3.18"

[build-dependencies]
glib-build-tools = "0.19.0"
